fix: spacing on smaller laptop and tablet devices

--- a/src/scripts/components/main/data-viewer/data-viewer.module.css
+++ b/src/scripts/components/main/data-viewer/data-viewer.module.css
@@ -1,5 +1,5 @@
 .dataViewer {
-  --spacing: clamp(10px, 10vw, 120px);
+  --spacing: min(120px, 8%);
   height: 100%;
   display: grid;
   place-items: center;
@@ -72,7 +72,7 @@
       "globe-nav-area explore ";
     grid-template-rows: 1fr auto 1fr;
     grid-template-columns: 50vw 50vw;
-    grid-template-columns: 50dvw 50dvw;
+    grid-template-columns:  2fr 1fr;
     grid-gap: 1.5rem;
 
     &[data-nav-content="nav-category"] {
